# wintermute

./: .gitignore  .travis.yml  CMakeLists.txt  index.html  params.json
cmake/: CMakeLists.txt
cmake/Modules/: CMakeLists.txt  UseWintermute.cmake  WintermuteMacros.cmake  WintermuteSettings.cmake
src/: CMakeLists.txt  agentinfo.proto  core.cpp  core.hpp  coremessages.proto  main.cpp  simplemessage.proto
testing/: CMakeLists.txt  wntr-client.cpp
